--- a/Projet_final.Rmd
+++ b/Projet_final.Rmd
@@ -344,18 +344,30 @@ On peut terminer par représenter nos individus (les pays) sur le premier plan f
 plot.pca.fd(TempACPF)
 ```
 
+
 ```{r}
-# Création du dataframe
-data <- data.frame(
-  Pays = c("Algeria", "Antigua and Barbuda", "Australia", "Austria", "Bahrain", "Belgium", "Canada", "Chile", "Comoros", "South Korea", "Dominica", "Spain", "Finland", "France", "Gabon", "Ghana", "Guinea", "Equatorial Guinea", "Honduras", "Iceland", "Italy", "Japan", "Jordan", "Kiribati", "Kuwait", "Lesotho", "Libya", "Madagascar", "Malaysia", "Morocco", "Norway", "New Zealand", "Oman", "Paraguay", "Netherlands","Portugal", "Qatar", "United Kingdom", "Saint Vincent and the Grenadines", "Saint Lucia", "Seychelles", "Singapore", "Sri Lanka", "Switzerland", "Suriname","Trinidad and Tobago"),
-  
-CatastropheNaturelle = c(0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1)
-)
+Pays = c("Algeria", "Antigua and Barbuda", "Australia", "Austria", "Bahrain", "Belgium",
+           "Canada", "Chile", "Comoros", "South Korea", "Dominica", "Spain", "Finland",
+           "France", "Gabon", "Ghana", "Guinea", "Equatorial Guinea", "Honduras", "Iceland",
+           "Italy", "Japan", "Jordan", "Kiribati", "Kuwait", "Lesotho", "Libya", "Madagascar",
+           "Malaysia", "Morocco", "Norway", "New Zealand", "Oman", "Paraguay", "Netherlands",
+           "Portugal", "Qatar", "United Kingdom", "Saint Vincent and the Grenadines",
+           "Saint Lucia", "Seychelles", "Singapore", "Sri Lanka", "Switzerland", "Suriname",
+           "Trinidad and Tobago")
+CatastropheNaturelle = c(0, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 1, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 0, 1, 1, 0, 0, 1, 0, 1, 0, 1, 0, 0, 1, 1, 1, 0, 1, 0, 1, 1)
+cata <- data.frame(Pays = Pays, CatastropheNaturelle = CatastropheNaturelle)
+```
 
-# Affichage du dataframe
-print(data)
-
+```{r}
+pays <- data.frame(Pays=colnames(df))
+info_cata <- left_join(pays,cata,by="Pays")
 ```
 
 
-
+```{r}
+plot(TempACPF$scores[,1],TempACPF$scores[,2],pch=20,xlab="Axe 1", ylab="Axe 2",type="n")
+pays <- colnames(df)
+Catastrophe = as.factor(info_cata$CatastropheNaturelle)
+text(TempACPF$scores[,1],TempACPF$scores[,2],labels=pays,cex=0.7,col=as.numeric(Catastrophe))
+legend("topleft",legend = levels(Catastrophe),col=1:4,lty=1)
+```
